--- a/app/views/items/_items.html.erb
+++ b/app/views/items/_items.html.erb
@@ -19,16 +19,25 @@
           </p>
         </div>
         <div class="action clearfix">
-          <%= link_to "" , ownerships_path(item_code: item['itemCode'] , type: "Want") ,
-                      :class => "btn-want btn btn-danger btn-sm want",
-                      :item_code => "want-#{item['itemCode']}",
-                      :remote => true,
-                      :method => :post %>
-          <%= link_to "" , ownerships_path(item_code: item['itemCode'] , type: "Have") ,
-                      :class => "btn-have btn btn-warning btn-sm have",
-                      :item_code => "have-#{item['itemCode']}",
-                      :remote => true,
-                      :method => :post %>
+          <% local_item = Item.find_by(item_code: item['itemCode']) %>
+          <% if local_item and current_user.want?(local_item) %>
+            <%= render 'unwant', item: local_item %>
+          <% else %>
+            <%= link_to "" , ownerships_path(item_code: item['itemCode'] , type: "Want") ,
+                        :class => "btn-want btn btn-danger btn-sm want",
+                        :item_code => "want-#{item['itemCode']}",
+                        :remote => true,
+                        :method => :post %>
+          <% end %>
+          <% if local_item and current_user.have?(local_item) %>
+            <%= render 'unhave', item: local_item %>
+          <% else %>
+            <%= link_to "" , ownerships_path(item_code: item['itemCode'] , type: "Have") ,
+                        :class => "btn-have btn btn-warning btn-sm have",
+                        :item_code => "have-#{item['itemCode']}",
+                        :remote => true,
+                        :method => :post %>
+          <% end %>
         </div>
       </div>
     <% end %>
