--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,3 +1,8 @@
+<% content_for :head do %>
+  <title><%= @user.name + ' - monolist' %></title>
+  <%= tag "meta", {name: 'description', content: @user.items.collect{|item| item.title}.join(' ')} %>
+<% end %>
+
 <%= render 'profile' , user: @user %>
 
 
