--- a/app/assets/stylesheets/item.scss
+++ b/app/assets/stylesheets/item.scss
@@ -213,7 +213,7 @@ html, body {
       background: #fff;
       border-top-right-radius: 3px;
       border-top-left-radius: 3px;
-      .image-wrap {
+      .img-wrap {
         width: 100px;
         height: 100px;
         display: tabel-cell;
